# BuildMetaData

./: .flake8  .gitignore  Makefile  README.md  conf.env  pyproject.toml  pytest.ini
BuildMetaData/: __init__.py  app.py  app_controller.py  common.py  exception.py  main.py  model.py  utils.py
BuildMetaData/gui/: config_page.py  file_explorer_page.py  image_explorer_page.py  image_page.py  main_page.py  root_window.py
BuildMetaData/models/: meta_model.py  path_model.py  rarity_model.py
BuildMetaData/views/: meta_data_types.py  view_image_explorer.py
env/: conf.env  conf_test.env
tests/: fixtures.py  test_appcontroller.py
